Fixed ad categories view overflow issue.

--- a/css/glome.scss
+++ b/css/glome.scss
@@ -1512,6 +1512,27 @@ $full_page_z_index: 10000;
   {
     height: 1em;
     overflow: hidden;
+    width: ($col_width + $col_margin) * 3;
+    
+    @include respond-to(5)
+    {
+      width: ($col_width + $col_margin) * 2;
+    }
+    
+    @include respond-to(3)
+    {
+      width: ($col_width + $col_margin) * 3;
+    }
+    
+    @include respond-to(2)
+    {
+      width: ($col_width + $col_margin) * 2;
+    }
+    
+    @include respond-to(1)
+    {
+      width: 100%;
+    }
   }
   .glome-image-container
   {
@@ -1520,6 +1541,15 @@ $full_page_z_index: 10000;
     {
       max-width: 100px;
       max-height: 50px;
+    }
+  }
+  
+  @include respond-to-lte(3)
+  {
+    & > *
+    {
+      padding-left: 0;
+      display: block;
     }
   }
 }
